<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sub_category_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        tools:context="com.tai.starwars.modules.userDetails.UserDetailsActivity">

        <ImageButton
            style="?borderlessButtonStyle"
            android:id="@+id/detail_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_arrow_back_white_24dp"
            tools:ignore="ContentDescription" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/detail_pick_up"
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_back"
            android:layout_marginTop="32dp"/>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/detail_drop_off"
            android:layout_width="310dp"
            android:layout_height="310dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_back" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_pick_up">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/detail_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:letterSpacing="0.4"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_picture"
                app:layout_constraintTop_toTopOf="@id/detail_picture"
                app:layout_constraintBottom_toBottomOf="@id/detail_picture"
                tools:text="DARK VADOR"/>

            <View
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/warm_grey"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_picture"/>

            <TextView
                android:id="@+id/detail_departure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_departure"
                android:textColor="@color/warm_grey"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator"/>

            <TextView
                android:id="@+id/detail_departure_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_departure"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:letterSpacing="0.2"
                android:textSize="16sp"
                tools:text="YARVIN 4"/>

            <TextView
                android:id="@+id/detail_departure_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/warm_grey"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_departure_name"
                tools:text="2:12 PM"/>

            <TextView
                android:id="@+id/detail_arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_arrival"
                android:textColor="@color/warm_grey"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_departure"
                app:layout_constraintTop_toBottomOf="@id/separator"/>

            <TextView
                android:id="@+id/detail_arrival_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/detail_arrival"
                app:layout_constraintTop_toBottomOf="@id/detail_arrival"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:letterSpacing="0.2"
                android:textSize="16sp"
                tools:text="NABOO"/>

            <TextView
                android:id="@+id/detail_arrival_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/warm_grey"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/detail_arrival"
                app:layout_constraintTop_toBottomOf="@id/detail_arrival_name"
                tools:text="7:35 PM"/>

            <TextView
                android:id="@+id/detail_trip_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_distance"
                android:textColor="@color/warm_grey"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_departure_time" />

            <TextView
                android:id="@+id/detail_trip_distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_trip_distance"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:letterSpacing="0.2"
                android:textSize="16sp"
                tools:text="2,478,572 KM"/>

            <TextView
                android:id="@+id/detail_trip_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_duration"
                android:textColor="@color/warm_grey"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@id/detail_arrival"
                app:layout_constraintTop_toBottomOf="@id/detail_arrival_time" />

            <TextView
                android:id="@+id/detail_trip_duration_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/detail_trip_duration"
                app:layout_constraintTop_toBottomOf="@id/detail_trip_distance"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:letterSpacing="0.2"
                android:textSize="16sp"
                tools:text="5:23:47"/>

            <TextView
                android:id="@+id/detail_pilot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_pilot"
                android:textColor="@color/warm_grey"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_trip_distance_value" />

            <ImageView
                android:id="@+id/star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_filled"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_pilot"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_filled"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star1"
                app:layout_constraintTop_toBottomOf="@id/detail_pilot"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_filled"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star2"
                app:layout_constraintTop_toBottomOf="@id/detail_pilot"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_filled"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star3"
                app:layout_constraintTop_toBottomOf="@id/detail_pilot"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_filled"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/star4"
                app:layout_constraintTop_toBottomOf="@id/detail_pilot"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/detail_star_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="star1,star2,star3,star4,star5"/>

            <TextView
                android:id="@+id/detail_not_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_pilot_not_rating"
                android:textAllCaps="true"
                android:textColor="@color/warm_grey"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:textStyle="bold"
                android:letterSpacing="0.2"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_pilot"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>




